force-app/main/default/objects/fw1__Invoice__c/fields/fw1__Payment_Profile__c.field-meta.xml
<CustomField>
    <fullName>fw1__Payment_Profile__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Payment profile to be used for Auto-BillPay installments</inlineHelpText>
    <label>Payment Profile</label>
    <referenceTo>fw1__PaymentProfile__c</referenceTo>
    <relationshipLabel>Invoices</relationshipLabel>
    <relationshipName>Invoices</relationshipName>
    <type>Lookup</type>
</CustomField>