force-app/main/default/objects/fw1__Invoice__c/fields/fw1__Payment_Receipt_Email_Message__c.field-meta.xml
<CustomField>
    <fullName>fw1__Payment_Receipt_Email_Message__c</fullName>
    <label>Payment Receipt Email Message</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>