force-app/main/default/objects/fw1__Invoice__c/fields/fw1__Pending_Auto_Bill_Pay__c.field-meta.xml
<CustomField>
    <fullName>fw1__Pending_Auto_Bill_Pay__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pending Auto Bill Pay</label>
    <type>Checkbox</type>
</CustomField>