force-app/main/default/objects/fw1__Invoice__c/fields/fw1__Printed_Date__c.field-meta.xml
<CustomField>
    <fullName>fw1__Printed_Date__c</fullName>
    <inlineHelpText>This field cobtains the timestamp when this invoice was printed</inlineHelpText>
    <label>Printed Date</label>
    <type>DateTime</type>
</CustomField>