force-app/main/default/objects/fw1__Invoice__c/fields/fw1__Processor_Category__c.field-meta.xml
<CustomField>
    <fullName>fw1__Processor_Category__c</fullName>
    <label>Processor Category</label>
    <length>80</length>
    <type>Text</type>
</CustomField>