force-app/main/default/objects/fw1__Invoice__c/fields/fw1__Recipient_Email__c.field-meta.xml
<CustomField>
    <fullName>fw1__Recipient_Email__c</fullName>
    <label>Recipient Email</label>
    <type>Email</type>
</CustomField>