force-app/main/default/objects/fw1__Invoice__c/fields/fw1__Recipient_Name__c.field-meta.xml
<CustomField>
    <fullName>fw1__Recipient_Name__c</fullName>
    <label>Recipient Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>