force-app/main/default/objects/fw1__Invoice__c/fields/fw1__Reply_To_Email__c.field-meta.xml
<CustomField>
    <fullName>fw1__Reply_To_Email__c</fullName>
    <label>Reply To Email</label>
    <type>Email</type>
</CustomField>