force-app/main/default/objects/fw1__Invoice__c/fields/fw1__Required_Down_Payment_Amount__c.field-meta.xml
<CustomField>
    <fullName>fw1__Required_Down_Payment_Amount__c</fullName>
    <inlineHelpText>You can enter the required down payment amount here.</inlineHelpText>
    <label>Required Down Payment Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>