force-app/main/default/objects/fw1__Invoice__c/fields/fw1__Retry_Date__c.field-meta.xml
<CustomField>
    <fullName>fw1__Retry_Date__c</fullName>
    <label>Retry Date</label>
    <type>Date</type>
</CustomField>