force-app/main/default/objects/fw1__Invoice__c/fields/fw1__Revolving_Balance__c.field-meta.xml
<CustomField>
    <fullName>fw1__Revolving_Balance__c</fullName>
    <description>This field contains the SUM of balances coming from all unpaid invoices of the same recurring invoice</description>
    <label>Revolving Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>