force-app/main/default/objects/fw1__Invoice__c/fields/fw1__Shipping_And_Handling__c.field-meta.xml
<CustomField>
    <fullName>fw1__Shipping_And_Handling__c</fullName>
    <inlineHelpText>Shipping And Handling Amount</inlineHelpText>
    <label>Shipping And Handling</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>