force-app/main/default/objects/fw1__Invoice__c/fields/fw1__Shipping_City__c.field-meta.xml
<CustomField>
    <fullName>fw1__Shipping_City__c</fullName>
    <label>Shipping City</label>
    <length>50</length>
    <type>Text</type>
</CustomField>