force-app/main/default/objects/fw1__Invoice__c/fields/fw1__Shipping_State__c.field-meta.xml
<CustomField>
    <fullName>fw1__Shipping_State__c</fullName>
    <label>Shipping State</label>
    <length>50</length>
    <type>Text</type>
</CustomField>