force-app/main/default/objects/fw1__Invoice__c/fields/fw1__Statement_Descriptor__c.field-meta.xml
<CustomField>
    <fullName>fw1__Statement_Descriptor__c</fullName>
    <label>Statement Descriptor</label>
    <length>100</length>
    <type>Text</type>
</CustomField>