force-app/main/default/objects/fw1__Invoice__c/fields/fw1__Status__c.field-meta.xml
<CustomField>
    <fullName>fw1__Status__c</fullName>
    <formula>IF( fw1__Is_Voided__c, 
    $Label.fw1__Voided, 
    IF( fw1__Installments_Reconfiguration_Needed__c , 
        $Label.fw1__Reconfigure_Installments, 
        IF( fw1__Is_Overdue__c, 
            $Label.fw1__Overdue, 
            fw1__Status_Sys__c
        ) 
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status</label>
    <type>Text</type>
</CustomField>