force-app/main/default/objects/fw1__Invoice__c/fields/fw1__Status_Sys__c.field-meta.xml
<CustomField>
    <fullName>fw1__Status_Sys__c</fullName>
    <label>Status (System only, do not use)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>