force-app/main/default/objects/fw1__Invoice__c/fields/fw1__Tax__c.field-meta.xml
<CustomField>
    <fullName>fw1__Tax__c</fullName>
    <inlineHelpText>Tax Percentage</inlineHelpText>
    <label>Tax</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>