force-app/main/default/objects/fw1__Invoice__c/fields/fw1__Tax_Amount__c.field-meta.xml
<CustomField>
    <fullName>fw1__Tax_Amount__c</fullName>
    <formula>IF( fw1__Tax_Amount_Override__c &gt; 0, 
    fw1__Tax_Amount_Override__c, 
    IF( fw1__Is_Shipping_Taxable__c, 
        (fw1__Net_Taxable_Amount__c +  fw1__Shipping_And_Handling__c)  *  fw1__Tax__c,
        fw1__Net_Taxable_Amount__c  *  fw1__Tax__c
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tax Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>