force-app/main/default/objects/fw1__Invoice__c/fields/fw1__Terms__c.field-meta.xml
<CustomField>
    <fullName>fw1__Terms__c</fullName>
    <inlineHelpText>Days due from Invoice Date</inlineHelpText>
    <label>Terms</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>