force-app/main/default/objects/fw1__Invoice__c/fields/fw1__Terms_Accepted__c.field-meta.xml
<CustomField>
    <fullName>fw1__Terms_Accepted__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Indicates whether or not the customer has accepted the terms of the invoice.</inlineHelpText>
    <label>Terms Accepted</label>
    <type>Checkbox</type>
</CustomField>