force-app/main/default/objects/fw1__Invoice__c/fields/fw1__Terms_And_Conditions_Link__c.field-meta.xml
<CustomField>
    <fullName>fw1__Terms_And_Conditions_Link__c</fullName>
    <description>URL to your Terms And Conditions</description>
    <label>Terms And Conditions Link</label>
    <type>Url</type>
</CustomField>