force-app/main/default/objects/fw1__Invoice__c/fields/fw1__Total_Additional_Charges__c.field-meta.xml
<CustomField>
    <fullName>fw1__Total_Additional_Charges__c</fullName>
    <label>Total Additional Charges</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>