force-app/main/default/objects/fw1__Invoice__c/fields/fw1__Total_Installment_Fees__c.field-meta.xml
<CustomField>
    <fullName>fw1__Total_Installment_Fees__c</fullName>
    <label>Total Installment Fees</label>
    <summarizedField>fw1__Installment__c.fw1__Installment_Fee__c</summarizedField>
    <summaryForeignKey>fw1__Installment__c.fw1__Invoice__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>