force-app/main/default/objects/fw1__Invoice__c/fields/fw1__Total_Invoice_Amount__c.field-meta.xml
<CustomField>
    <fullName>fw1__Total_Invoice_Amount__c</fullName>
    <formula>ROUND( 
fw1__Total_Installment_Fees__c +
fw1__Total_Additional_Charges__c + 
fw1__Revolving_Balance__c + 
fw1__Net_Amount__c + 
fw1__Tax_Amount__c +  
fw1__Shipping_And_Handling__c + 
((IF(fw1__Net_Amount__c &gt; fw1__Total_Non_Installment__c, 
     fw1__Net_Amount__c - fw1__Total_Non_Installment__c, 
     0))  *   fw1__Installment_Fee__c ),2)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Invoice Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>