force-app/main/default/objects/fw1__Invoice__c/fields/fw1__Total_Lines_Count__c.field-meta.xml
<CustomField>
    <fullName>fw1__Total_Lines_Count__c</fullName>
    <label>Total Lines Count</label>
    <summaryForeignKey>fw1__Invoice_Line__c.fw1__Invoice__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>