force-app/main/default/objects/fw1__Invoice__c/fields/fw1__Total_Lines_Taxable_Amount__c.field-meta.xml
<CustomField>
    <fullName>fw1__Total_Lines_Taxable_Amount__c</fullName>
    <label>Total Lines Taxable Amount</label>
    <summarizedField>fw1__Invoice_Line__c.fw1__Amount__c</summarizedField>
    <summaryFilterItems>
        <field>fw1__Invoice_Line__c.fw1__Taxable__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>fw1__Invoice_Line__c.fw1__Sales_Tax__c</field>
        <operation>equals</operation>
        <value>0</value>
    </summaryFilterItems>
    <summaryForeignKey>fw1__Invoice_Line__c.fw1__Invoice__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>