force-app/main/default/objects/fw1__Invoice__c/fields/fw1_ContactName__c.field-meta.xml
<CustomField>
    <fullName>fw1_ContactName__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ContactName</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Invoices (ContactName)</relationshipLabel>
    <relationshipName>Invoices</relationshipName>
    <type>Lookup</type>
</CustomField>