force-app/main/default/objects/fw1__Invoice__c/fields/fw2__Order__c.field-meta.xml
<CustomField>
    <fullName>fw2__Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Order</label>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>Invoices</relationshipLabel>
    <relationshipName>Invoices</relationshipName>
    <type>Lookup</type>
</CustomField>