force-app/main/default/objects/fw1__Invoice__c/fields/fw2__Quote__c.field-meta.xml
<CustomField>
    <fullName>fw2__Quote__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Quote</label>
    <referenceTo>Quote</referenceTo>
    <relationshipLabel>Invoices</relationshipLabel>
    <relationshipName>Invoices</relationshipName>
    <type>Lookup</type>
</CustomField>