force-app/main/default/objects/fw1__Invoice__c/fields/Invalid_Pricebook__c.field-meta.xml
<CustomField>
    <fullName>Invalid_Pricebook__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Invalid Pricebook</label>
    <type>Checkbox</type>
</CustomField>