force-app/main/default/objects/fw1__Invoice__c/fields/Invoice_Header__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Header__c</fullName>
    <label>Invoice Header</label>
    <length>255</length>
    <type>Text</type>
</CustomField>