force-app/main/default/objects/fw1__Invoice__c/fields/Invoice_Number__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Number__c</fullName>
    <description>Use this field to show master invoice number as a hyperlink.</description>
    <formula>HYPERLINK(&quot;/&quot; &amp; Id , Master_Invoice_Number__c ,&quot;_self&quot;)</formula>
    <inlineHelpText>Use this field to show master invoice number as a hyperlink.</inlineHelpText>
    <label>Master Invoice No.</label>
    <type>Text</type>
</CustomField>