force-app/main/default/objects/fw1__Invoice__c/fields/Invoice_Quickbooks_ID__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Quickbooks_ID__c</fullName>
    <label>Invoice Quickbooks ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>