force-app/main/default/objects/fw1__Invoice__c/fields/InvoiceAmountinWords__c.field-meta.xml
<CustomField>
    <fullName>InvoiceAmountinWords__c</fullName>
    <label>Invoice Amount in Words</label>
    <length>255</length>
    <type>Text</type>
</CustomField>