force-app/main/default/objects/fw1__Invoice__c/fields/IvoryCoastLineItemDescription__c.field-meta.xml
<CustomField>
    <fullName>IvoryCoastLineItemDescription__c</fullName>
    <label>Ivory Coast Line Item Description</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Rainforest Alliance Grower Group – Global audit cost</fullName>
            </value>
            <value>
                <fullName>Groupe de producteur Rainforest Alliance – Frais d’audit global</fullName>
            </value>
            <value>
                <fullName>Rainforest Alliance Supply chain – Global audit cost</fullName>
            </value>
            <value>
                <fullName>Chaîne d’approvisionnement Rainforest Alliance – Frais d’audit global</fullName>
            </value>
            <value>
                <fullName>FTUSA – APS: Global audit cost</fullName>
            </value>
            <value>
                <fullName>FTUSA – APS: Frais d’audit global</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>