force-app/main/default/objects/fw1__Invoice__c/fields/IvoryCoastTravelExpenseDescription__c.field-meta.xml
<CustomField>
    <fullName>IvoryCoastTravelExpenseDescription__c</fullName>
    <label>Ivory Coast Travel Expense Description</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Auditor Travel Expenses</fullName>
            </value>
            <value>
                <fullName>Frais de voyage de l’auditeur</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>