force-app/main/default/objects/fw1__Invoice__c/fields/IvoryConvertedAmount__c.field-meta.xml
<CustomField>
    <fullName>IvoryConvertedAmount__c</fullName>
    <label>IvoryConvertedAmount</label>
    <length>255</length>
    <type>Text</type>
</CustomField>