force-app/main/default/objects/fw1__Invoice__c/fields/IvoryConvertedProfessionalFees__c.field-meta.xml
<CustomField>
    <fullName>IvoryConvertedProfessionalFees__c</fullName>
    <label>IvoryConvertedProfessionalFees</label>
    <length>255</length>
    <type>Text</type>
</CustomField>