force-app/main/default/objects/fw1__Invoice__c/fields/IvoryConvertedReimbursement__c.field-meta.xml
<CustomField>
    <fullName>IvoryConvertedReimbursement__c</fullName>
    <label>IvoryConvertedReimbursement</label>
    <length>255</length>
    <type>Text</type>
</CustomField>