force-app/main/default/objects/fw1__Invoice__c/fields/Language__c.field-meta.xml
<CustomField>
    <fullName>Language__c</fullName>
    <description>Helper field - not used by users</description>
    <label>Language</label>
    <length>255</length>
    <type>Text</type>
</CustomField>