force-app/main/default/objects/fw1__Invoice__c/fields/Master_Invoice_Number__c.field-meta.xml
<CustomField>
    <fullName>Master_Invoice_Number__c</fullName>
    <label>Master Invoice Number</label>
    <length>80</length>
    <type>Text</type>
</CustomField>