force-app/main/default/objects/fw1__Invoice__c/fields/Print_Account_Site_Only__c.field-meta.xml
<CustomField>
    <fullName>Print_Account_Site_Only__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If checked, only the Account Site Name will print on the Invoice. If unchecked, it will print Company Name and Account Site name (if provided).</inlineHelpText>
    <label>Print Account Site Only</label>
    <type>Checkbox</type>
</CustomField>