force-app/main/default/objects/fw1__Invoice__c/fields/Program__c.field-meta.xml
<CustomField>
    <fullName>Program__c</fullName>
    <formula>fw1__Opportunity__r.Programc__r.Name</formula>
    <label>Program</label>
    <type>Text</type>
</CustomField>