force-app/main/default/objects/fw1__Invoice__c/fields/Program_ID__c.field-meta.xml
<CustomField>
    <fullName>Program_ID__c</fullName>
    <formula>fw1__Opportunity__r.Programc__r.Program_ID__c</formula>
    <label>Program ID</label>
    <type>Text</type>
</CustomField>