force-app/main/default/objects/fw1__Invoice__c/fields/Program_Nest_Unit_ID__c.field-meta.xml
<CustomField>
    <fullName>Program_Nest_Unit_ID__c</fullName>
    <formula>IF( fw1__Entity__r.Name = &quot;SCS Global&quot;,  fw1__Opportunity__r.Programc__r.Nest_Unit_ID__c ,
IF( fw1__Entity__r.Name = &quot;SCS Consulting&quot;,  fw1__Opportunity__r.Programc__r.Consulting_NestUnit_ID__c ,
IF( fw1__Entity__r.Name = &quot;Ivory Coast&quot;, fw1__Opportunity__r.Programc__r.Ivory_Coast_NestUnit_ID__c, &quot;&quot;)))</formula>
    <label>Program Nest Unit ID</label>
    <type>Text</type>
</CustomField>