force-app/main/default/objects/fw1__Invoice__c/fields/Program_QB_Class_Id__c.field-meta.xml
<CustomField>
    <fullName>Program_QB_Class_Id__c</fullName>
    <formula>IF( fw1__Entity__r.Name = &quot;SCS Global&quot;, fw1__Opportunity__r.Programc__r.QB_Class_Id__c,
IF( fw1__Entity__r.Name = &quot;SCS Consulting&quot;, fw1__Opportunity__r.Programc__r.Consulting_QB_Class_Id__c,
IF( fw1__Entity__r.Name = &quot;Ivory Coast&quot;, fw1__Opportunity__r.Programc__r.Ivory_Coast_QB_Class_Id__c, &quot;&quot;)))</formula>
    <label>Program QB Class Id</label>
    <type>Text</type>
</CustomField>