force-app/main/default/objects/fw1__Invoice__c/fields/QB_Refnum__c.field-meta.xml
<CustomField>
    <fullName>QB_Refnum__c</fullName>
    <label>QB Refnum</label>
    <length>40</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>