force-app/main/default/objects/fw1__Invoice__c/fields/SCS_Balance_Due__c.field-meta.xml
<CustomField>
    <fullName>SCS_Balance_Due__c</fullName>
    <formula>fw1__Total_Invoice_Amount__c - fw1__Total_Paid_Amount__c - fw1__Authorized_Amount__c - fw1__Pending_Settlement_Amount__c - Total_Credit_Memo_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Balance Due</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>