force-app/main/default/objects/fw1__Invoice__c/fields/SCS_Email_Sent__c.field-meta.xml
<CustomField>
    <fullName>SCS_Email_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SCS Email Sent</label>
    <type>Checkbox</type>
</CustomField>