force-app/main/default/objects/fw1__Invoice__c/fields/Send_Invoice_Ready_Email__c.field-meta.xml
<CustomField>
    <fullName>Send_Invoice_Ready_Email__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send Invoice Ready Email</label>
    <type>Checkbox</type>
</CustomField>