force-app/main/default/objects/fw1__Invoice__c/fields/Total_Credit_Memo_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Credit_Memo_Amount__c</fullName>
    <inlineHelpText>Credit Memo Amount is included in Total Paid Amount</inlineHelpText>
    <label>Total Credit Memo Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>