force-app/main/default/objects/fw1__Invoice__c/fields/TotalConvertedAmount__c.field-meta.xml
<CustomField>
    <fullName>TotalConvertedAmount__c</fullName>
    <formula>fw1__Total_Invoice_Amount__c *  ConversionRate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Converted Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>