force-app/main/default/objects/fw1__Invoice__c/fields/TotalConvertedProfessionalFees__c.field-meta.xml
<CustomField>
    <fullName>TotalConvertedProfessionalFees__c</fullName>
    <formula>ProfessionalFees__c * ConversionRate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Converted Professional Fees</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>