force-app/main/default/objects/fw1__Invoice__c/fields/TotalConvertedReimbursementExpenses__c.field-meta.xml
<CustomField>
    <fullName>TotalConvertedReimbursementExpenses__c</fullName>
    <formula>TotalReimbursmentExpenses__c * ConversionRate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Converted Reimbursement Expenses</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>