force-app/main/default/objects/fw1__Invoice__c/fields/TotalReimbursmentExpenses__c.field-meta.xml
<CustomField>
    <fullName>TotalReimbursmentExpenses__c</fullName>
    <label>Total Reimbursment Expenses</label>
    <summarizedField>fw1__Invoice_Line__c.fw1__Amount__c</summarizedField>
    <summaryFilterItems>
        <field>fw1__Invoice_Line__c.Revenue_Type__c</field>
        <operation>equals</operation>
        <value>R - Reimbursable/Travel</value>
    </summaryFilterItems>
    <summaryForeignKey>fw1__Invoice_Line__c.fw1__Invoice__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>