force-app/main/default/objects/fw1__Invoice__c/validationRules/Cannot_edit_Invoice_if_sent_or_paid.validationRule-meta.xml
<ValidationRule>
    <fullName>Cannot_edit_Invoice_if_sent_or_paid</fullName>
    <active>true</active>
    <errorConditionFormula>AND( $Profile.Name != &apos;SCS Integration&apos;,
ISCHANGED( fw1__Total_Invoice_Amount__c ),
OR(
fw1__Email_Sent__c = TRUE,
NOT(ISBLANK(  Quickbooks_ID__c  )) 
))</errorConditionFormula>
    <errorMessage>You cannot edit an Invoice that has already been sent to Quickbooks. For any changes, you can create a new Invoice or a Credit Memo.</errorMessage>
</ValidationRule>