force-app/main/default/objects/fw1__Invoice__c/listViews/fw1__All.listView-meta.xml
<ListView>
    <fullName>fw1__All</fullName>
    <columns>NAME</columns>
    <columns>fw1__Account__c</columns>
    <columns>fw1__Invoice_Date__c</columns>
    <columns>fw1__Due_Date__c</columns>
    <columns>fw1__Total_Invoice_Amount__c</columns>
    <columns>fw1__Balance_Due__c</columns>
    <columns>fw1__Status__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Total_Credit_Memo_Amount__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>